--- a/monzzle3.0/about.html
+++ b/monzzle3.0/about.html
@@ -147,7 +147,7 @@
     <section class="s-member">
         <div class="section-title">
             <p>Members</p>
-            <h1>Here's our teammates.</h1>
+            <h1>我們的團隊成員</h1>
         </div>
 
         <div class="members-content">
