--- a/monzzle3.0/game.html
+++ b/monzzle3.0/game.html
@@ -135,19 +135,20 @@
     </section>
 
     <!-- <div id="frame"></div> -->
-    <div id="game">
-        <li class="tile" id="1"><span class="number">1</span></li>
-        <li class="tile" id="2"><span class="number">2</span></li>
-        <li class="tile" id="3"><span class="number">3</span></li>
-        <li class="tile" id="4"><span class="number">4</span></li>
-        <li class="tile" id="5"><span class="number">5</span></li>
-        <li class="tile" id="6"><span class="number">6</span></li>
-        <li class="tile" id="7"><span class="number">7</span></li>
-        <li class="tile" id="8"><span class="number">8</span></li>
-        <li class="tile" id="blank"><span></span></li>
-    </div>
-    <div id="help"><input type="checkbox" name="enablehelp" onchange="shownumbers();">Enable Help</div>
-
+    <section class="s-game">
+        <div id="game">
+            <li class="tile" id="1"><span class="number">1</span></li>
+            <li class="tile" id="2"><span class="number">2</span></li>
+            <li class="tile" id="3"><span class="number">3</span></li>
+            <li class="tile" id="4"><span class="number">4</span></li>
+            <li class="tile" id="5"><span class="number">5</span></li>
+            <li class="tile" id="6"><span class="number">6</span></li>
+            <li class="tile" id="7"><span class="number">7</span></li>
+            <li class="tile" id="8"><span class="number">8</span></li>
+            <li class="tile" id="blank"><span></span></li>
+        </div>
+        <!-- <div id="help"><input type="checkbox" name="enablehelp" onchange="shownumbers();">Enable Help</div> -->
+    </section>
 
     <script src="js/header.js"></script>
     <script src="js/game.js"></script>
