--- a/haveagoodidea/index.html
+++ b/haveagoodidea/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="info">
                     聯絡資訊：<br />
-                    <span>????@gmail.com</span>
+                    <span>learningmate8@gmail.com</span>
                 </div>
             </div>
         </div>
