--- a/monzzle3.0/monster.html
+++ b/monzzle3.0/monster.html
@@ -116,19 +116,21 @@
         </div>
     </section>
 
+    <div style="width: 100%; overflow-x: hidden;">
+        <section class="s-scroll">
+            <div class="banner-title">
+                這是——<br />
+                妖怪的<br />
+                設計理念。<br />
+            </div>
 
-    <section class="s-scroll">
-        <div class="banner-title">
-            這是——<br />
-            妖怪的<br />
-            設計理念。<br />
-        </div>
+            <div class="scroll-content">
+                <div class="scroll-list s-transition" id="scroll-list"></div>
+            </div>
 
-        <div class="scroll-content">
-            <div class="scroll-list s-transition" id="scroll-list"></div>
-        </div>
-
-    </section>
+        </section>
+    </div>
+       
 
     <div class="nav-content">
         <div class="waviy">
@@ -153,10 +155,6 @@
     <script src="js/header.js"></script>
     <script src="js/base.js"></script>
     <script src="js/monster.js"></script>
-
-    <script>
-
-    </script>
 </body>
 
 </html>
