--- a/monzzle3.0/monster_introduction.html
+++ b/monzzle3.0/monster_introduction.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/loader.css">
     <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/monster.css">
+    <link rel="stylesheet" href="css/monster-introduction.css">
 </head>
 
 <body>
@@ -81,7 +81,30 @@
 
 
     <style>
-        .monster-bg{
+        .monster {
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .monster-content {
+            width: 80%;
+            height: 80vh;
+        }
+
+        .monster-content img {
+            height: 80vh;
+            width: 100%;
+            object-fit: contain;
+            margin-bottom: -40vh;
+        }
+
+        .monster-bg {
+            width: 100%;
+            height: 40vh;
+            border-radius: 50px;
             background: rgb(212, 211, 211);
         }
     </style>
@@ -89,10 +112,9 @@
     <section class="monster">
         <div class="monster-content">
             <img src="resource/monster/cat.png" alt="">
+            <div class="monster-bg"></div>
         </div>
     </section>
-
-
 
     <script src="js/header.js"></script>
     <script src="js/monster.js"></script>
@@ -102,23 +124,23 @@
         integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
-        let dataUrl = 'json/monster.json',
-            monsterId;
+        dataUrl = 'json/monster.json';
+        let monsterId;
 
-        // $(document).ready(function () {
-        //     $.urlParam = function (name) {
-        //         var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
-        //         if (results == null) {
-        //             return null;
-        //         }
-        //         return decodeURI(results[1]) || 0;
-        //     }
+        $(document).ready(function () {
+            $.urlParam = function (name) {
+                var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
+                if (results == null) {
+                    return null;
+                }
+                return decodeURI(results[1]) || 0;
+            }
 
-        //     monsterId = $.urlParam('id');
+            monsterId = $.urlParam('id');
 
-        //     getMonsterData();
+            getMonsterData();
 
-        // });
+        });
 
 
         function getMonsterData() {
@@ -136,7 +158,7 @@
                 console.log(res.data[i].name)
                 console.log(monsterId)
                 if (res.data[i].name == monsterId) {
-                    alert(res.data[i].name);
+                    $('.monster-content img').attr('src',`${res.data[i].imgPng}`)
                 }
             }
         };
