--- a/monzzle3.0/monster.html
+++ b/monzzle3.0/monster.html
@@ -116,7 +116,7 @@
         </div>
     </section>
 
-    <div style="width: 100%; overflow-x: hidden;">
+    <div style="width: 100vw; overflow-x: hidden;">
         <section class="s-scroll">
             <div class="banner-title">
                 這是——<br />
