--- a/monzzle3.0/monster.html
+++ b/monzzle3.0/monster.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>妖怪選單</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
@@ -16,6 +16,18 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/loader.css">
     <link rel="stylesheet" href="css/monster.css">
+    <style>
+        html {
+            overflow-x: hidden;
+            height: 100%;
+            width: 100%;
+            transform: translate3d(0, 0, 0);
+        }
+
+        body {
+            overflow-x: hidden;
+        }
+    </style>
 </head>
 
 <body>
@@ -130,7 +142,7 @@
 
         </section>
     </div>
-       
+
 
     <div class="nav-content">
         <div class="waviy">
