--- a/monzzle3.0/monster.html
+++ b/monzzle3.0/monster.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>妖怪選單</title>
+    <title>妖怪集結</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -60,7 +60,7 @@
                     <a href="subject.html">專題介紹</a>
                 </div>
                 <div class="nav nav-4">
-                    <a href="monster.html">妖怪選單</a>
+                    <a href="monster.html">妖怪集結</a>
                 </div>
                 <div class="nav nav-5">
                     <a href="game.html">小遊戲</a>
