--- a/monzzle3.0/shop.html
+++ b/monzzle3.0/shop.html
@@ -45,7 +45,7 @@
                     <a href="subject.html">專題介紹</a>
                 </div>
                 <div class="nav nav-4">
-                    <a href="monster.html">妖怪選單</a>
+                    <a href="monster.html">妖怪集結</a>
                 </div>
                 <div class="nav nav-5">
                     <a href="game.html">小遊戲</a>
