--- a/monzzle3.0/game.html
+++ b/monzzle3.0/game.html
@@ -110,11 +110,14 @@
                     <div class="right-nav" id="bird">婆娑鳥</div>
                 </div>
                 <div class="bad">
-                    <div class="right-nav" id="dragon">傀儡山之雲龍</div>
+                    <div class="right-nav" id="dragon">雲龍</div>
                     <div class="right-nav" id="girl">金魅</div>
                     <div class="right-nav" id="fish">人魚</div>
                     <div class="right-nav" id="tiger">虎姑婆</div>
                     <div class="right-nav" id="coin">金銀鬼</div>
+                    <div class="right-nav" id="coin">疫鬼</div>
+                    <div class="right-nav" id="coin">魔神仔</div>
+                    <div class="right-nav" id="coin">麞妖</div>
                 </div>
             </div>
 
