--- a/monzzle3.0/about.html
+++ b/monzzle3.0/about.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>關於我們</title>
-    <script src="js/scrollreveal.js"></script>
-    <script src="js/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/loader.css">
-    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/white-header.css">
 </head>
 
 <body>
@@ -22,7 +21,7 @@
 
     <header>
         <div class="logo">
-            <a href="index.html"><img src="resource/header/headerlogo.png" class=""></a>
+            <a href="test2.html"><img src="resource/header/headerlogo.png" class=""></a>
         </div>
         <div class="header-right">
             <div class="menu-border" id="menu-border"></div>
@@ -79,193 +78,177 @@
 
     <div class="menu-mask"></div>
 
+    <section class="s-aa">
+        <div class="left">
+            <div class="left-imgs">
+                <div class="left-img left-img1 leftshow big-left"></div>
+                <div class="left-img left-img2"></div>
+                <div class="left-img left-img3"></div>
+            </div>
+        </div>
 
-    <section class="s-banner">
-        <div class="title-content">
-            <div class="title-text">
-                <p>大家好! 我們是<br /></p>
-                <h1>妖來妖去</h1>
+        <div class="right">
+            <div class="right-imgs">
+                <div class="right-img right-img1 rightshow big-right"></div>
+                <div class="right-img right-img2"></div>
+                <div class="right-img right-img3"></div>
             </div>
-            <div class="title-text">
-                <p>Hi! We are<br /></p>
-                <h1>Monzzle</h1>
+            <div class="right-text">
+                這是一段介紹文字<br />
+                這是一段介紹文字<br />
+                這是一段介紹文字
             </div>
-        </div>
-    </section>
-
-    <section class="s-60-40">
-        <div class="section-60">
-            <div>
-                <h1>" 團隊介紹 "</h1>
-                <p>我們是一群因緣際會下聚在一起的人，團隊總計五人，每個人都有不同的特質與個性，發揮各自的專長，負責不同的工作內容，過程中有爭吵也有歡笑，雖然每周都在趕進度，燃燒肝臟燃燒生命。</p>
-            </div>
-        </div>
-        <div class="section-40">
-            <img src="resource/portrait/0.jpg" class="image">
-        </div>
-    </section>
-
-    <section class="s-40-60">
-        <div class="section-40">
-            <img src="resource/Churchill-min.jpg" class="image">
-        </div>
-        <div class="section-60">
-            <div>
-                <h1>" 團隊座右銘 "</h1>
-                <p>underidoderidoderiododeriodoo</p>
-                <p>-Winstion Churchill</p>
-
-                <audio controls>
-                    <source src="resource/Churchill.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-        </div>
-    </section>
-
-    <section class="s-lorem">
-        <div class="section-60">
-            <div>
-                <p>Create By</p>
-                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero sequi soluta ut iste</h1>
-                <br />
-                <p>Serivices</p>
-                <h1> Libero nostrum suscipit voluptatibus.</h1>
-            </div>
-        </div>
-        <div class="section-40">
-            <div>
-                <p>Something here</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim tempore dolorum expedita unde
-                    voluptates
-                    iste veniam reiciendis in, hic perferendis praesentium ut repellat aperiam facere voluptatibus.
-                    Molestias quis est ratione!</p>
-            </div>
-        </div>
     </section>
 
     <section class="s-member">
-        <div class="section-title">
-            <p>Members</p>
-            <h1>我們的團隊成員</h1>
+        <div class="team-content">
+            <div class="team-left">
+                <div class="team-lists">
+                    <div class="team-list">
+                        <div class="list-left">999年99月99日</div>
+                        <div class="list-right">五人達成共識，團隊正式成立。</div>
+                    </div>
+                    <div class="team-list">
+                        <div class="list-left">999年99月99日</div>
+                        <div class="list-right">「妖來妖去去」團隊明決定。</div>
+                    </div>
+                    <div class="team-list">
+                        <div class="list-left">999年99月99日</div>
+                        <div class="list-right">第一隻妖怪誕生，正式啟程</div>
+                    </div>
+                </div>
+            </div>
+            <div class="team-right">
+                <div class="waviy">
+                    <span style="--i:1">查</span>
+                    <span style="--i:2">看</span>
+                    <span style="--i:3">更</span>
+                    <span style="--i:4">多</span>
+                    <span style="--i:5">內</span>
+                    <span style="--i:6">容</span>
+                </div>
+                <!-- <div class="list-btn">查看更多內容</div> -->
+            </div>
         </div>
 
         <div class="members-content">
-            <div class="member">
-                <img src="resource/members/1.svg" class="image">
-                <div class="member-text">
-                    <h3>朱恩彤</h3>
-                    <p>個性：外向、講好笑的話<br />
-                        專長：畫插圖、英文<br />
-                        工作內容：妖怪&地圖底色上色、名牌設計​</p>
-                </div>
+            <div class="member-left">
+                <h1>團隊介紹</h1>
+                <h1>用生命繪製妖怪的人們</h1>
+                <h1>Monzzle XV</h1><br />
+                <p>我們是一群因綠際會下聚在一起的人類僩盥隊總
+                    計五人，每個人都有不同的特質與個性，發揮各自
+                    的專長，負責不同的工作內容，雖然每週都在趕進
+                    度，而工作也不斷地冒出來，，過程中随然有爭吵
+                    但也有歡笑。
+                    享受一起燃燒生命的充實感，
+                    肝不黑，人生就白活了。</p>
             </div>
-
-            <div class="member">
-                <div class="member-img">
-                    <img src="resource/members/2.svg" class="image">
-                </div>
-                <div class="member-text">
-                    <h3>鄧宇秀</h3>
-                    <p>個性：外冷內熱、笑點低<br />
-                        專長：繪圖、彈吉他​<br />
-                        工作內容：標準字設計、妖怪角色&地圖明暗繪製​​</p>
-                </div>
-            </div>
-
-            <div class="member">
-                <div class="member-img">
-                    <img src="resource/members/3.svg" class="image">
-                </div>
-                <div class="member-text">
-                    <h3>何嘉欣</h3>
-                    <p>個性：慢熟、笑點奇低​<br />
-                        專長：繪畫、設計​<br />
-                        工作內容：妖怪&地圖草圖設計、地圖精修​​</p>
-                </div>
-            </div>
-
-            <div class="member">
-                <div class="member-img">
-                    <img src="resource/members/4.svg" class="image">
-                </div>
-                <div class="member-text">
-                    <h3>林采辰</h3>
-                    <p>個性：自由奔放、挑戰自我<br />
-                        專長：插畫、手作、烘焙​<br />
-                        工作內容：圖鑑排版、元素設計​</p>
-                </div>
-            </div>
-
-            <div class="member">
-                <div class="member-img">
-                    <img src="resource/members/5.svg" class="image">
-                </div>
-                <div class="member-text">
-                    <h3>吳彥呈</h3>
-                    <p>個性：宅、陰沉<br />
-                        專長：寫程式、設計軟體​<br />
-                        工作內容：網頁製作、企劃書撰寫​</p>
+            <div class="member-right">
+                <div class="member-right-img">
+                    <img src="resource/members/team-last.jpg" alt="">
                 </div>
             </div>
         </div>
-    </section>
 
-    <section class="s-paragraph">
-        <div class="content" id="content">
-            <div class="content-text">
-                <p>Contact us　　</p>
+        <div class="members-content2">
+            <div class="members">
+
+                <div class="member">
+                    <div class="member-icon">
+                        <img src="resource/members/11.svg" alt="">
+                    </div>
+                    <div class="member-image">
+                        <img src="resource/members/01-min.jpg" alt="">
+                    </div>
+                    <div class="member-text">
+                        <h1>妖怪、地圖底色上色<br />
+                            名牌設計</h1>
+                        <p>我叫恩彤，高中是應用英文科畢業，所以在英文能力方面有一定的水準。因為本身對設計行銷方面有興趣，所以來的文化創意事業系學習更多技能和知識。興趣是畫插圖，未來也希望能以圖文創作為目標。
+                        </p>
+                    </div>
+                </div>
+
+                <div class="member">
+                    <div class="member-icon">
+                        <img src="resource/members/22.svg" alt="">
+                    </div>
+                    <div class="member-image">
+                        <img src="resource/members/02-min.jpg" alt="">
+                    </div>
+                    <div class="member-text">
+                        <h1>標準字設計<br />
+                            妖怪、地圖明暗繪製</h1>
+                        <p>雖然我外表看起來很文靜，但其實熟了知會是能和大家一起瘋起來的人！因為平常就有喝茶的習慣，所以和書中人物產生共鳴，便提出關於茶文化的主題，最後被採用也覺得很開心，希望能將茶文化傳遞給更多人知道。
+                        </p>
+                    </div>
+                </div>
+
+                <div class="member">
+                    <div class="member-icon">
+                        <img src="resource/members/33.svg" alt="">
+                    </div>
+                    <div class="member-image">
+                        <img src="resource/members/03-min.jpg" alt="">
+                    </div>
+                    <div class="member-text">
+                        <h1>妖怪、地圖草圖設計<br />
+                            地圖精修</h1>
+                        <p>高中時就讀了廣告設計科，因此開啟了我繪畫創作設計的道路，平常我都會隨身攜帶畫本好能隨時隨地作畫。大一課堂上所教的手抄紙一直讓我印象深刻，如果能用這麼特別的呈現方式來表現出茶文化，我覺得會是一大進展跟突破，開啟大家新的視野。
+                        </p>
+                    </div>
+                </div>
+
+                <div class="member">
+                    <div class="member-icon">
+                        <img src="resource/members/44.svg" alt="">
+                    </div>
+                    <div class="member-image">
+                        <img src="resource/members/04-min.jpg" alt="">
+                    </div>
+                    <div class="member-text">
+                        <h1>圖鑑排版、元素設計​<br />
+                            網站設計</h1>
+                        <p>古靈精怪的水瓶座，有許多天馬行空的想法，偶爾會利用手作實踐一些構想；本身喜歡畫插圖，也有一些貼圖作品，希望能盡自己最大的努力為專題帶來一些幫助。
+                        </p>
+                    </div>
+                </div>
+
+                <div class="member">
+                    <div class="member-icon">
+                        <img src="resource/members/55.svg" alt="">
+                    </div>
+                    <div class="member-image">
+                        <img src="resource/members/05-min.jpg" alt="">
+                    </div>
+                    <div class="member-text">
+                        <h1>網站撰寫</h1><br />
+                        <p>本身較不喜歡外出的我，平時的休閒娛樂就是待在家中使用電腦，或許是從小較常接觸，所以對軟體的操作，或寫程式較有興趣。仍有不足之處，但我也會盡心盡力完成份內的工作，拿出最好的成品。
+                        </p>
+                    </div>
+                </div>
+
             </div>
-            <div>
-                <h1>聯絡我們</h1>
-            </div>
+            <div class="members-bg"></div>
         </div>
     </section>
 
-    <script src="js/header.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+        integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="js/test.js"></script>
     <script src="js/base.js"></script>
+    <script src="js/white-header.js"></script>
     <script>
-        var imgs = [];  					//定義一個運算元組
-        $('.image').each(function () {  	//遍歷所有圖片,將圖片
-            var dfd = $.Deferred();  				//定義一個將要完成某個操作的物件
-            $(this).bind('load', function () {
-                dfd.resolve();  			//圖片載入完成後,表示操作成功
-            });
-            if (this.complete) {				//如果圖片載入狀態為完成,那麼也標識操作成功
-                setTimeout(function () {
-                    dfd.resolve();
-                }, 2000);
-            }
-            imgs.push(dfd);  			//將所有操作物件放入陣列中
+        let leftImgs = ["left-img1", "left-img2", "left-img3"];
+        let rightImgs = ["right-img1", "right-img2", "right-img3"];
+        $('.members-bg').height($('.members').height() + 150);
+
+        $(window).resize(function () {
+            $('.members-bg').height($('.members').height() + 150);
         })
-        $.when.apply(null, imgs).done(function () {  	//註冊所有操作完成後的執行方法
-            $('.loader_bg').hide();
-            loadedImg();
-        });
 
-        ScrollReveal({
-            reset: true, distance: '60px',
-            duration: 2500,
-            delay: 400
-        });
-
-        function loadedImg() {
-            ScrollReveal({
-                reset: false,
-                distance: '60px',
-                duration: 2500,
-                delay: 200
-            });
-            ScrollReveal().reveal('.s-banner', { delay: 200, origin: 'bottom' });
-            ScrollReveal().reveal('.s-60-40 .section-40', { delay: 200, origin: 'right' });
-            ScrollReveal().reveal('.s-60-40 .section-60 div, .s3 .section-60 div', { delay: 500, origin: 'bottom' });
-            ScrollReveal().reveal('.s-40-60 .section-40', { delay: 500, origin: 'left' });
-            ScrollReveal().reveal('.s-lorem .section-60', { delay: 200, origin: 'left' });
-            ScrollReveal().reveal('.s-lorem .section-40', { delay: 200, origin: 'right' });
-            ScrollReveal().reveal('.s-member .section-title', { delay: 200, origin: 'bottom' });
-            ScrollReveal().reveal('.s-member .member', { delay: 200, origin: 'bottom', interval: 50 });
-            ScrollReveal().reveal('.s-paragraph', { delay: 200, origin: 'left' });
-        };
     </script>
 </body>
 
