--- a/monzzle3.0/subject.html
+++ b/monzzle3.0/subject.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>專題介紹</title>
-    <script src="js/scrollreveal.js"></script>
-    <script src="js/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/loader.css">
-    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/subject.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/white-header.css">
 </head>
 
 <body>
@@ -79,85 +78,109 @@
 
     <div class="menu-mask"></div>
 
-
-    <section class="s-banner">
-        <div class="title-content">
-            <div class="title-text">
-                <!-- <p>大家好! 我們是<br /></p> -->
-                <h1>專題介紹</h1>
-            </div>
-            <div class="title-text">
-                <!-- <p>Hi! We are<br /></p> -->
-                <h1>Introduction</h1>
+    <section class="s-aa">
+        <div class="left">
+            <div class="left-imgs">
+                <div class="left-img left-img1 leftshow big-left"></div>
+                <div class="left-img left-img2"></div>
+                <div class="left-img left-img3"></div>
             </div>
         </div>
+
+        <div class="right">
+            <div class="right-imgs">
+                <div class="right-img right-img1 rightshow big-right"></div>
+                <div class="right-img right-img2"></div>
+                <div class="right-img right-img3"></div>
+            </div>
+            <div class="right-text">
+                這是一段介紹文字<br />
+                這是一段介紹文字<br />
+                這是一段介紹文字
+            </div>
     </section>
 
-    <section class="s-lorem">
-        <div class="section-60">
-            <div>
-                <p>起源</p>
-                <h1>在參考的書目中，內容大致分為三個時代-大航海時代、明清時代、日本時代，於是我們先將其分成神界、陸海空及原住民三大類做篩選。​<br /><br />
-
-                    考量資料的明確性，我們先刪除了典故與地理位置不明的，再依據資料詳細度與熟悉性高，最終篩選出20隻妖怪。
-                </h1>
-                <br />
-                <p>關於妖怪</p>
-                <h1>妖怪的傳說有向正向良善的典故，也有負面警惕的典故，例如：正面的制風龜、負面的金魅。</h1>
+    <section class="s-member">
+        <div class="team-content">
+            <div class="team-left">
+                <div class="team-lists">
+                    <div class="team-list">
+                        <div class="list-left">999年99月99日</div>
+                        <div class="list-right">五人達成共識，團隊正式成立。</div>
+                    </div>
+                    <div class="team-list">
+                        <div class="list-left">999年99月99日</div>
+                        <div class="list-right">「妖來妖去去」團隊明決定。</div>
+                    </div>
+                    <div class="team-list">
+                        <div class="list-left">999年99月99日</div>
+                        <div class="list-right">第一隻妖怪誕生，正式啟程</div>
+                    </div>
+                </div>
+            </div>
+            <div class="team-right">
+                <div class="waviy">
+                    <span style="--i:1">查</span>
+                    <span style="--i:2">看</span>
+                    <span style="--i:3">更</span>
+                    <span style="--i:4">多</span>
+                    <span style="--i:5">內</span>
+                    <span style="--i:6">容</span>
+                </div>
+                <!-- <div class="list-btn">查看更多內容</div> -->
             </div>
         </div>
-        <div class="section-40">
-            <div>
-                <p>妖怪設計</p>
-                <p>我們透過蒐集來妖怪的資料，與網路上的參考資料，最終將可愛、怪奇、夢幻作為我們的風格，並以微寫實、插畫風來表現。<br /><br />
-                    以擬人的手法設計妖怪，除了讓妖怪形象看起來更有親和力，也能讓妖怪特色在人形上更生動豐富。
-                </p>
-            </div>
-        </div>
-    </section>
 
-    <section class="s-60-40">
-        <div class="section-60">
-            <div>
-                <h1>" 標準字 "</h1>
+        <div class="members-content">
+            <div class="member-left">
+                <h1>標準字</h1>
+                <h1>logotype</h1><br />
                 <p>「妖來妖去」帶有一種動態感，​除了象徵妖怪的活潑，​也帶出妖怪無拘無束，無處不在的形象。​字體後方的煙霧元素增加一絲神祕感，​其中「妖」字中的橘點就像妖怪在偷看。​<br />​<br />
                     而英文「XV MONZZLE」的XV是羅馬數字15，​代表著我們的15隻妖怪，​而MONZZLE是monster與puzzle的結合，​意味著妖怪與拼圖。</p>
             </div>
-        </div>
-        <div class="section-40">
-            <img src="resource/subject/text.jpg" class="image">
-        </div>
-    </section>
-
-    <section class="s-40-60">
-        <div class="section-40">
-            <img src="resource/subject/color.jpg" class="image">
-        </div>
-        <div class="section-60">
-            <div>
-                <h1>" 標準色 "</h1>
-                <p>以古樸的紅褐色搭配自然的藍綠色，​帶出悠久的年代。​<br />​<br />
-                    藍綠色象徵天空與海洋合而為一，​紅褐色象徵大地與鄉村風情，​從而表達「處處皆妖怪」的意味。​</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="s-paragraph">
-        <a href="monster.html">
-            <div class="content" id="content">
-                <div class="content-text">
-                    <p>Click　　</p>
-                </div>
-                <div>
-                    <h1>查看妖怪</h1>
+            <div class="member-right">
+                <div class="member-right-img">
+                    <img src="resource/subject/text2.jpg" alt="">
                 </div>
             </div>
-        </a>
+        </div>
+
+        <div class="members-content2">
+            <div class="members">
+                <div class="member-left2">
+                    <div class="member-left2-img">
+                        <img src="resource/subject/color2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="member-right2">
+                    <h1>標準色</h1>
+                    <h1>corporate colour</h1><br />
+                    <p>以古樸的紅褐色搭配自然的藍綠色，​帶出悠久的年代。​<br />​<br />
+                        藍綠色象徵天空與海洋合而為一，​紅褐色象徵大地與鄉村風情，​從而表達「處處皆妖怪」的意味。</p>
+                </div>
+            </div>
+
+            <div class="members-bg"></div>
+        </div>
     </section>
 
-    <script src="js/header.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+        integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="js/scrollreveal.js"></script>
+    <script src="js/test.js"></script>
     <script src="js/base.js"></script>
+    <script src="js/white-header.js"></script>
     <script>
+        let leftImgs = ["left-img1", "left-img2", "left-img3"];
+        let rightImgs = ["right-img1", "right-img2", "right-img3"];
+        $('.members-bg').height($('.members').height() + 100);
+
+        $(window).resize(function () {
+            $('.members-bg').height($('.members').height() + 100);
+        });
+
         var imgs = [];  					//定義一個運算元組
         $('.image').each(function () {  	//遍歷所有圖片,將圖片
             var dfd = $.Deferred();  				//定義一個將要完成某個操作的物件
@@ -173,7 +196,9 @@
         })
         $.when.apply(null, imgs).done(function () {  	//註冊所有操作完成後的執行方法
             $('.loader_bg').hide();
-            loadedImg();
+            if ($(window).width() > 600) {
+                loadedImg();
+            }
         });
 
         ScrollReveal({
@@ -189,16 +214,17 @@
                 duration: 2500,
                 delay: 200
             });
-            ScrollReveal().reveal('.s-banner', { delay: 200, origin: 'bottom' });
-            ScrollReveal().reveal('.s-60-40 .section-40', { delay: 200, origin: 'right' });
-            ScrollReveal().reveal('.s-60-40 .section-60 div, .s3 .section-60 div', { delay: 500, origin: 'bottom' });
-            ScrollReveal().reveal('.s-40-60 .section-40', { delay: 500, origin: 'left' });
-            ScrollReveal().reveal('.s-lorem .section-60', { delay: 200, origin: 'left' });
-            ScrollReveal().reveal('.s-lorem .section-40', { delay: 200, origin: 'right' });
-            ScrollReveal().reveal('.s-member .section-title', { delay: 200, origin: 'bottom' });
-            ScrollReveal().reveal('.s-member .member', { delay: 200, origin: 'bottom', interval: 50 });
-            ScrollReveal().reveal('.s-paragraph', { delay: 200, origin: 'left' });
+
+
+            ScrollReveal().reveal('.right-text', { delay: 250, origin: 'bottom' });
+            ScrollReveal().reveal('.team-list', { delay: 200, origin: 'left', interval: 150 });
+            ScrollReveal().reveal('.member-right', { delay: 200, origin: 'right' });
+            ScrollReveal().reveal('.member-left', { delay: 400, origin: 'left' });
+            ScrollReveal().reveal('.members-bg', { delay: 200, origin: 'right' });
+            ScrollReveal().reveal('.member-right2', { delay: 200, origin: 'right' });
+            ScrollReveal().reveal('.member-left2', { delay: 400, origin: 'left' });
         };
+
     </script>
 </body>
 
