--- a/monzzle3.0/about.html
+++ b/monzzle3.0/about.html
@@ -93,6 +93,8 @@
                 <div class="right-img right-img1 rightshow big-right"></div>
                 <div class="right-img right-img2"></div>
                 <div class="right-img right-img3"></div>
+                <div class="right-img right-img4"></div>
+                <div class="right-img right-img5"></div>
             </div>
             <div class="right-text">
                 這是一段介紹文字<br />
@@ -244,7 +246,7 @@
     <script src="js/white-header.js"></script>
     <script>
         let leftImgs = ["left-img1", "left-img2", "left-img3"];
-        let rightImgs = ["right-img1", "right-img2", "right-img3"];
+        let rightImgs = ["right-img1", "right-img2", "right-img3","right-img4","right-img5"];
         $('.members-bg').height($('.members').height() + 150);
 
         $(window).resize(function () {
